--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,31 +1,31 @@
 @media (max-width: 1200px)
-  .container 
+  .container
     max-width: 960px
-  .slider 
+  .slider
     width: 590px
   .hotel
-    &-slider 
-      &__image 
+    &-slider
+      &__image
         width: 100%
         height: 100%
         object-fit: cover
-  .card 
+  .card
     width: 230px
     height: 230px
-  .footer 
-    &__input 
+  .footer
+    &__input
       flex-basis: 100%
 @media (max-width: 992px)
-  .container, 
+  .container,
   .newsletter-wrapper
     max-width: 700px
-  .logo 
+  .logo
     width: 132px
-  .navbar 
+  .navbar
     &__top
       padding-top: 30px
       padding-bottom: 30px
-    &__seaarch 
+    &__search
       margin-left: auto
     &-menu
       padding-top: 22px
@@ -34,70 +34,70 @@
         font-size: 12px
         line-height: 15px
   .search
-    &__input 
-      max-width: 340px
-  .hotel 
-    &-grid 
+    &__input
+      width: 340px
+  .hotel
+    &-grid
       flex-direction: column
-    &__slider 
+    &__slider
 
       width: 100%
       margin-bottom: 30px
-    &-right 
+    &-right
       flex-direction: row
-  .booking 
+  .booking
     width: 340px
-  .map 
+  .map
     width: 340px
-  .reviews 
-    &-slider 
-      &__item 
+  .reviews
+    &-slider
+      &__item
         max-width: 580px
   .activities
-    &-wrapper 
+    &-wrapper
       flex-wrap: wrap
-    &__card 
+    &__card
       margin-bottom: 20px
-  .card 
+  .card
     width: 340px
     height: 250px
-  .footer 
-    &-wrapper 
+  .footer
+    &-wrapper
       grid-template-columns: repeat(6, 1fr)
       grid-row-gap: 40px
-    &__input 
+    &__input
       flex-basis: 49%
-    &__logo 
+    &__logo
       grid-row: 1 / 2
       grid-column: span 2
     &__social
-      &-network 
-        grid-row: 1 / 2 
+      &-network
+        grid-row: 1 / 2
         grid-column: span 4
         align-self: center
-    &__categories 
+    &__categories
       grid-row: 2 / 3
       grid-column: span 2
-    &__legal 
+    &__legal
       grid-column: span 2
     &__additional
       grid-column: span 2
-    &__contact 
-      &-details 
+    &__contact
+      &-details
         grid-row: 3
         grid-column: span 5
-      &-form 
+      &-form
         grid-column: span 5
         grid-row: 4
 @media (max-width: 768px)
   .container
     max-width: 576px
     width: 92%
-  .navbar 
-    &__search, &-menu, &__user 
+  .navbar
+    &__search, &-menu, &__user
       display: none
-  .menu 
-    &-button 
+  .menu
+    &-button
       display: flex
       width: 16px
       height: 11px
@@ -108,86 +108,86 @@
       border: none
       background-color: #fff
       cursor: pointer
-      &__line 
+      &__line
         width: 16px
         height: 1px
         background-color: $text-color
   .stars
     flex-basis: content
-  .hotel 
+  .hotel
     &-name
       flex-basis: 100%
-    &-wrapper 
+    &-wrapper
       justify-content: space-between
-    &-info 
-      &__text 
+    &-info
+      &__text
         width: 100%
-      &__name 
+      &__name
         margin-top: 10px
         margin-bottom: 0
-      &__rating 
+      &__rating
         display: none
-      &__offer 
+      &__offer
         order: -1
         margin-left: 0
   .hotel
-    &-right 
+    &-right
       flex-direction: column
       min-height: 450px
-    &-slider 
+    &-slider
       height: 350px
-  .booking 
+  .booking
     width: 100%
-  .map 
+  .map
     width: 100%
-  .newsletter 
+  .newsletter
     &-wrapper
       max-width: 576px
       width: 92%
       flex-direction: column
       align-items: flex-start
-  .reviews 
-    &-slider 
-      &__item 
+  .reviews
+    &-slider
+      &__item
         padding: 0 30px 30px
-        &:after, &:before 
+        &:after, &:before
           display: none
-      &__button 
+      &__button
         top: 32px
 
-        &--prev 
+        &--prev
           left: 50%
           margin-left: -65px
           transform: translate(-50%, 0)
-        &--next 
+        &--next
           right: 50%
           margin-right: -65px
           transform: translate(50%, 0)
-  .activities 
+  .activities
     padding-top: 40px
     padding-bottom: 60px
-  .card 
+  .card
     width: 49%
     height: 255px
-  .footer 
-    &__input 
+  .footer
+    &__input
       flex-basis: 100%
 @media (max-width: 576px)
-  .logo 
+  .logo
     width: 99px
-  .hotel 
+  .hotel
     &__slider
       margin-bottom: 20px
-    &-slider 
+    &-slider
       height: 278px
-  .newsletter 
+  .newsletter
     padding: 76px 0 83px 0
-    &__title 
+    &__title
       margin-bottom: 37px
-  .subscribe 
+  .subscribe
     width: 100%
-  .reviews 
-    &__title 
+  .reviews
+    &__title
       width: 245px
       height: 46px
       margin: auto
@@ -198,35 +198,35 @@
     &-slider
       &__text
         width: 219px
-  .card 
+  .card
     width: 100%
-  .footer 
-    &-wrapper 
+  .footer
+    &-wrapper
       grid-template-columns: 1fr
-    &__logo 
+    &__logo
       grid-row: 1
       grid-column: 1
-    &__social 
-      &-network 
+    &__social
+      &-network
         grid-row: 2
         grid-column: 1
-    &__additional 
+    &__additional
       grid-row: 3
       grid-column: 1
-    &__categories 
+    &__categories
       grid-row: 4
       grid-column: 1
-    &__legal 
+    &__legal
       grid-row: 5
       grid-column: 1
-    &__contact 
-      &-details 
+    &__contact
+      &-details
         grid-row: 6
         grid-column: 1
-      &-form 
+      &-form
         grid-row: 7
         grid-column: 1
-    &__info 
+    &__info
       grid-row: 8
       grid-column: 1
     &__button
