--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -1,6 +1,6 @@
-.navbar  
+.navbar
   background-color: #fff
-  &-top 
+  &-top
     display: flex
     align-items: center
     justify-content: space-between
@@ -8,13 +8,13 @@
     padding-bottom: 40px
     &__menu-button
       display: none
-  &__seaarch 
+  &__search
     margin-right: auto
     margin-left: 108px
-  
-  &-bottom 
+
+  &-bottom
     background-color: $dark
-  &-menu 
+  &-menu
     list-style: none
     margin: 0
     padding: 31px 0
@@ -22,22 +22,22 @@
     align-items: center
     justify-content: space-between
     color: $light
-    &__link 
+    &__link
       color: inherit
       text-decoration: none
       text-transform: uppercase
       font-size: 14px
       line-height: 18px
-.logo 
+.logo
   width: 177px
-.search 
+.search
   display: flex
   position: relative
   overflow: hidden
   border-radius: 6px
   height: 40px
-  &__input 
-    width: 340px
+  &__input
+    width: 350px
     height: 100%
     padding-left: 23px
     padding-right: 75px
@@ -46,7 +46,7 @@
     font-size: 12px
     line-height: 15px
     color: $text-color
-  &__button 
+  &__button
     position: absolute
     top: 0
     right: 0
@@ -54,18 +54,17 @@
     height: 100%
     border: none
     background-color: $pimary
-.user 
+.user
   display: flex
   align-items: center
   text-decoration: none
-  &__avatar 
+  &__avatar
     width: 40px
     height: 40px
     border-radius: 50%
     object-fit: cover
-  &__name 
+  &__name
     margin-left: 18px
     font-size: 14px
     line-height: 18px
     color: $text-color
-
