--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -4,16 +4,15 @@ body
   font-family: 'Mulish', sans-serif
   color: $text-color
   background-color: $secondary
-button:active, button:focus 
+img
+  max-width: 100%
+button:active, button:focus
   outline: none
-input:active, input:focus 
+input:active, input:focus
   outline: none
-a 
+a
   text-decoration: none
   color: inherit
-.container 
+.container
   max-width: 1110px
   margin: auto
-
-
-
