--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -13,6 +13,32 @@ input:active, input:focus
 a
   text-decoration: none
   color: inherit
+textarea
+  outline: none
 .container
   max-width: 1110px
   margin: auto
+.input
+  background-color: #fff
+  border-radius: 4px
+  border: none
+  padding: 0 23px
+  height: 50px
+.message
+  background-color: #fff
+  border-radius: 4px
+  padding: 18px 23px
+  border: none
+  resize: none
+.button
+  min-width: 160px
+  min-height: 50px
+  padding: 18px
+  font-style: normal
+  font-weight: bold
+  font-size: 12px
+  line-height: 15px
+  color: $light
+  background-color: $pimary
+  border: none
+  border-radius: 4px
