--- a/sass/style.sass
+++ b/sass/style.sass
@@ -18,6 +18,7 @@
 @import 'blocks/activities'
 // connecting footer
 @import 'blocks/footer'
+// connecting modal window
+@import 'blocks/modal'
 // conncting adaptive styles
 @import 'media'
-
