--- a/css/style.css
+++ b/css/style.css
@@ -1314,6 +1314,7 @@ template {
   -ms-flex-preferred-size: 100%;
       flex-basis: 100%;
   margin-bottom: 23px;
+  height: 123px;
 }
 
 .footer__info {
