--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -76,6 +76,7 @@
   &__message
     flex-basis: 100%
     margin-bottom: 23px
+    height: 123px
   &__info
     font-style: normal
     font-weight: bold
