--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -1,42 +1,43 @@
-.hotel 
+.hotel
   padding-top: 23px
   padding-bottom: 70px
-  &-info 
+  &-info
     display: flex
     align-items: center
     justify-content: space-between
     padding-bottom: 20px
-    &__offer 
+    &__offer
       margin-left: 14px
       margin-top: 4px
-    &__name 
+    &__name
       margin-top: 4px
       margin-bottom: 0
-    &__description 
+    &__description
       margin: 5px 0
-  &-name 
+  &-name
     text-transform: uppercase
     font-size: 24px
-    line-height: 30px 
+    line-height: 30px
 
-  &-wrapper 
+  &-wrapper
     display: flex
     flex-wrap: wrap
     align-items: center
-  &-description 
+  &-description
     font-size: 12px
     line-height: 15px
-  &-grid 
+  &-grid
     display: flex
     justify-content: space-between
   &-right
     display: flex
     flex-direction: column
     justify-content: space-between
-  &-slider 
-    width: 728px
+  &-slider
+    max-width: 728px
     height: 450px
-    &__item 
+    margin: 0
+    &__item
       width: 100%
       height: 100%
       position: relative
@@ -53,7 +54,7 @@
         right: 0
         background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%)
         z-index: 10
-    &__button 
+    &__button
       position: absolute
       top: 50%
       transform: translateY(-50%)
@@ -66,15 +67,15 @@
       background-position: center
       background-size: 10px
       background-color: transparent
-      &--next 
+      &--next
         right: 18px
         background-image: url(../img/arrow-next.svg)
 
-      &--prev 
+      &--prev
         left: 18px
         background-image: url(../img/arrow-prev.svg)
-    
-.stars 
+
+.stars
   width: 100%
 .offer
   font-size: 10px
@@ -83,22 +84,21 @@
   background-color: $pimary
   border-radius: 3px
   color: $light
-.rating 
+.rating
   max-width: 65px
   min-height: 45px
   text-align: center
   color: $light
   background-color: $pimary
   border-radius: 4px
-  &__text 
+  &__text
     font-size: 8px
     line-height: 10px
-  &__counter 
+  &__counter
     font-size: 14px
     line-height: 18px
 
- 
-.booking 
+.booking
   background-color: $dark
   color: $light
   border-radius: 8px
@@ -109,27 +109,27 @@
     display: flex
     justify-content: space-between
     margin-bottom: 9px
-  &__price 
+  &__price
     display: flex
     flex-direction: column
-  &__start 
+  &__start
     font-weight: normal
     font-size: 10px
     line-height: 14px
-  &__pricetag 
+  &__pricetag
     font-style: normal
     font-weight: 800
     font-size: 24px
     line-height: 33px
-  &__per-room 
+  &__per-room
     font-style: normal
     font-weight: normal
     font-size: 12px
     line-height: 16px
-  &__room 
+  &__room
     margin-top: 4px
 
-  &__text 
+  &__text
     display: flex
     align-items: center
     justify-content: space-between
@@ -138,19 +138,19 @@
     font-weight: normal
     font-size: 12px
     line-height: 16px
-  &__description 
+  &__description
     margin-left: 9px
   &__call-center
     display: flex
     align-items: center
     justify-content: space-between
     margin-bottom: 17px
-  &__heading 
+  &__heading
     font-style: normal
     font-weight: 600
     font-size: 18px
     line-height: 25px
-  &__number 
+  &__number
     display: flex
     align-items: center
     justify-content: space-between
@@ -158,9 +158,9 @@
     font-weight: 600
     font-size: 18px
     line-height: 25px
-  &__num 
+  &__num
     margin-left: 8px
-  &__button 
+  &__button
     width: 100%
     min-height: 45px
     border-radius: 4px
@@ -172,9 +172,8 @@
     line-height: 19px
     color: $light
     cursor: pointer
-.map 
+.map
   width: 347px
   height: 213px
   border-radius: 10px
   overflow: hidden
-
